# calamities

./: .gitattributes  setup.cfg
calamities/: __init__.py  _version.py  color.py  config.py  file.py  keyboard.py  layout.py  question.py  text.py  view.py
calamities/input/: __init__.py  choice.py  file.py  pattern.py  text.py
calamities/pattern/: glob.py  re.py
