[metadata]
name = calamities
version = 0.0.1
author = Lea Waller
author-email = lea.waller@charite.de
home-page = https://github.com/HippocampusGirl/calamities
description = Terminal user interface library
long-description = file: README.rst
platform = any
keywords = curses interface terminal
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python
  	Programming Language :: Python :: 3.7
  	Programming Language :: Python :: 3.8
  	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = calamities
setup_requires =
  setuptools >= 38.3.0
install_requires =
	inflect >= 4.1.0

[pydocstyle]
match-dir = (?!tests)(?!resources)(?!docs)[^\.].*
match = (?!test)(?!setup)[^\._].*\.py
inherit = false
    
[flake8]
max-line-length = 80
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/